[Fix] Fixed layout issue with text for in about me panel and FYP project in small screen devices

--- a/src/index.css
+++ b/src/index.css
@@ -681,6 +681,12 @@ body{
   border-radius: 5px;
 }
 
+.dynamic-height-about-me{
+  height:47vh;
+}
+.dynamic-height-fyp{
+  height: 43vh;
+}
 
 
 @media (width <= 80rem ) {
